@@ -1,5 +1,6 @@
 package org.opensearch.migrations.replay;
 
+import lombok.extern.slf4j.Slf4j;
 import org.json.HTTP;
 import org.json.JSONObject;
 import org.opensearch.migrations.replay.TrafficReplayer.RequestResponsePacketPair;
@@ -16,7 +17,9 @@ import java.util.Base64;
 import java.util.Collections;
 import java.util.List;
 import java.util.Scanner;
+import java.util.stream.Collectors;
 
+@Slf4j
 public class RequestResponseResponseTriple {
     private RequestResponsePacketPair sourcePair;
     private List<byte[]> shadowResponseData;
@@ -35,14 +38,14 @@ public class RequestResponseResponseTriple {
 
         private JSONObject jsonFromHttpData(List<byte[]> data) throws IOException {
 
-            SequenceInputStream collatedStream = new SequenceInputStream(Collections.enumeration(data.stream().map(b -> new ByteArrayInputStream(b)).toList()));
+            SequenceInputStream collatedStream = new SequenceInputStream(Collections.enumeration(data.stream().map(b -> new ByteArrayInputStream(b)).collect(Collectors.toList())));
             Scanner scanner = new Scanner(collatedStream, StandardCharsets.UTF_8);
             scanner.useDelimiter("\r\n\r\n");  // The headers are seperated from the body with two newlines.
             String head = scanner.next();
             int header_length = head.getBytes(StandardCharsets.UTF_8).length + 4; // The extra 4 bytes accounts for the two newlines.
             // SequenceInputStreams cannot be reset, so it's recreated from the original data.
-            SequenceInputStream bodyStream = new SequenceInputStream(Collections.enumeration(data.stream().map(b -> new ByteArrayInputStream(b)).toList()));
-            bodyStream.skipNBytes(header_length);
+            SequenceInputStream bodyStream = new SequenceInputStream(Collections.enumeration(data.stream().map(b -> new ByteArrayInputStream(b)).collect(Collectors.toList())));
+            bodyStream.skip(header_length);
 
             // There are several limitations introduced by using the HTTP.toJSONObject call.
             // 1. We need to replace "\r\n" with "\n" which could mask differences in the responses.
@@ -65,8 +68,11 @@ public class RequestResponseResponseTriple {
         private JSONObject toJSONObject(RequestResponseResponseTriple triple) throws IOException {
             JSONObject meta = new JSONObject();
             meta.put("request", jsonFromHttpData(triple.sourcePair.requestData));
-            meta.put("primaryResponse", jsonFromHttpData(triple.sourcePair.responseData, triple.sourcePair.getTotalDuration()));
-            meta.put("shadowResponse", jsonFromHttpData(triple.shadowResponseData, triple.shadowResponseDuration));
+            log.warn("TODO: These durations are not measuring the same values!");
+            meta.put("primaryResponse", jsonFromHttpData(triple.sourcePair.responseData,
+                    triple.sourcePair.getTotalResponseDuration()));
+            meta.put("shadowResponse", jsonFromHttpData(triple.shadowResponseData,
+                    triple.shadowResponseDuration));
 
             return meta;
         }
